# bothan

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  rustfmt.toml
binance/: Cargo.toml
binance/examples/: dummy_example.rs
binance/src/: error.rs  lib.rs  service.rs  types.rs  websocket.rs
binance/src/cache/: cache.rs  error.rs
binance/src/websocket/: types.rs  util.rs  websocket.rs
bothan-api/: Cargo.toml  Dockerfile  buf.gen.yaml  buf.yaml  build.rs  config.toml  config.toml.example  go.mod  main.go  registry.json.example
bothan-api/client/go-client/: client.go  go.mod  go.sum  grpc.go  rest.go
bothan-api/client/rust-client/: Cargo.toml
bothan-api/go/: go.mod  go.sum  main.go
bothan-api/go-proxy/: go.mod  go.sum  main.go
bothan-api/go-proxy/proto/: query.pb.go  query.pb.gw.go  query_grpc.pb.go  unmarshaler.go
bothan-api/go/proto/: price.pb.go  price.pb.gw.go  price_grpc.pb.go  query.pb.gw.go
bothan-api/price/proto/: price.pb.go  price.pb.gw.go  price_grpc.pb.go
bothan-api/proto/: price.proto  query.proto
bothan-api/registry/: crypto_prices.json
bothan-api/server/: Cargo.toml  Dockerfile  config.toml.example
bothan-api/server-cli/: Cargo.toml  Dockerfile  config.example.toml  crypto.json
bothan-api/server-cli/src/: commands.rs  helper.rs  main.rs
bothan-api/server/registry/: crypto_price.json
bothan-api/server/src/: api.rs  config.rs  lib.rs  main.rs  manager.rs  monitoring.rs  post_processor.rs  processor.rs  proto.rs  registry.rs  tasks.rs  utils.rs
bothan-api/server/tests/: registry_test.rs
bothan-api/src/: api.rs  config.rs  main.rs  manager.rs  post_processor.rs  post_processors.rs  processor.rs  processors.rs  proto.rs  registry.rs  service_builder.rs  service_initializer.rs  tasks.rs  util.rs  utils.rs
bothan-api/src/config/: binance.rs  coingecko.rs
bothan-api/src/manager/: price_service.rs
bothan-api/src/post_processor/: tick.rs
bothan-api/src/post_processors/: tick.rs
bothan-api/src/price/: mod.rs  price.rs  price.tonic.rs
bothan-api/src/processor/: identity.rs  median.rs
bothan-api/src/processors/: identity.rs  median.rs
bothan-api/src/query/: query.rs
bothan-api/src/registry/: post_processor.rs  processor.rs  source.rs
bothan-api/src/task/: error.rs  task.rs  util.rs
bothan-api/src/tasks/: error.rs  signal_task.rs  source_task.rs  task.rs  util.rs  utils.rs
bothan-binance/: Cargo.toml
bothan-binance/examples/: binance_basic.rs  dummy_example.rs
bothan-binance/src/: api.rs  builder.rs  cache.rs  error.rs  lib.rs  service.rs  store.rs  types.rs  websocket.rs  worker.rs
bothan-binance/src/api/: error.rs  msgs.rs  types.rs  websocket.rs
bothan-binance/src/cache/: cache.rs  dash_map.rs  error.rs  hashmap.rs  types.rs
bothan-binance/src/service/: builder.rs
bothan-binance/src/store/: asset_store.rs  asset_worker.rs  builder.rs  types.rs
bothan-binance/src/websocket/: error.rs  websocket.rs
bothan-binance/src/worker/: asset_worker.rs  builder.rs  error.rs  opts.rs  types.rs
bothan-bitfinex/: Cargo.toml
bothan-bitfinex/src/: api.rs  lib.rs  worker.rs
bothan-bitfinex/src/api/: builder.rs  error.rs  msg.rs  rest.rs
bothan-bitfinex/src/worker/: opts.rs
bothan-bybit/: Cargo.toml
bothan-bybit/examples/: bybit_basic.rs
bothan-bybit/src/: api.rs  lib.rs  service.rs  worker.rs
bothan-bybit/src/api/: builder.rs  error.rs  rest.rs  types.rs  websocket.rs
bothan-bybit/src/service/: builder.rs  (+1 more)
bothan-coin-gecko/: Cargo.toml
bothan-coin-gecko/examples/: dummy_example.rs
bothan-coin-gecko/src/: api.rs  builder.rs  lib.rs  service.rs  types.rs
bothan-coinbase/: Cargo.toml
bothan-coinbase/examples/: coinbase_basic.rs
bothan-coinbase/src/: api.rs  error.rs  lib.rs  service.rs  types.rs  worker.rs
bothan-coingecko/: Cargo.toml
bothan-coingecko/examples/: coingecko_basic.rs  dummy_example.rs
bothan-coingecko/src/: api.rs  builder.rs  lib.rs  service.rs  types.rs  worker.rs
bothan-coinmarketcap/: Cargo.toml
bothan-coinmarketcap/examples/: coinmarketcap_basic.rs  dummy_example.rs
bothan-coinmarketcap/src/: api.rs  lib.rs  service.rs  worker.rs
bothan-core/: Cargo.toml
bothan-core/src/: api.rs  cache.rs  helpers.rs  ipfs.rs  lib.rs  manager.rs  monitoring.rs  registry.rs  service.rs  store.rs  tasks.rs  telemetry.rs  types.rs  utils.rs  worker.rs
bothan-cryptocompare/: Cargo.toml
bothan-cryptocompare/examples/: cryptocompare_basic.rs  dummy_example.rs
bothan-cryptocompare/src/: api.rs  builder.rs  error.rs  lib.rs  mock.rs  service.rs  worker.rs
bothan-htx/: Cargo.toml
bothan-htx/examples/: dummy_example.rs  htx_basic.rs
bothan-htx/src/: api.rs  lib.rs  service.rs  worker.rs
bothan-kraken/: Cargo.toml
bothan-kraken/examples/: kraken_basic.rs
bothan-kraken/src/: api.rs  builder.rs  error.rs  lib.rs  service.rs  types.rs  worker.rs
bothan-lib/: Cargo.toml
bothan-lib/src/: lib.rs  metrics.rs  registry.rs  store.rs  telemetry.rs  types.rs  worker.rs
bothan-okx/: Cargo.toml
bothan-okx/examples/: okx_basic.rs
bothan-okx/src/: api.rs  error.rs  lib.rs  service.rs  worker.rs
bothan-uniswap/: Cargo.toml
bothan-uniswap/examples/: basic_uniswap.rs
bothan-uniswap/src/: contract.rs  lib.rs
price-adapter/: CHANGELOG.md  Cargo.toml  README.md
price-adapter-raw/: CHANGELOG.md  Cargo.toml  README.md
price-adapter-raw/examples/: binance-service.rs  coingecko-basic.rs  coinmarketcap-pro.rs  huobipro-basic.rs
price-adapter-raw/src/: binance_websocket.rs  coingecko.rs  coinmarketcap.rs  error.rs  huobipro.rs  lib.rs  types.rs
price-adapter/examples/: binance-websocket-service.rs  binance-websocket.rs  coingecko-basic.rs  coingecko-interval-service.rs  coinmarketcap-interval-service.rs  coinmarketcap-pro.rs  huobipro-basic.rs  huobipro-interval-service.rs
price-adapter/resources/: binance.json  coingecko.json  coinmarketcap.json  huobipro.json
price-adapter/src/: binance.rs  coingecko.rs  error.rs  lib.rs  mappers.rs  services.rs  sources.rs  stable_coin.rs  types.rs
(+335 files in other folders)
