[workspace.package]
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bandprotocol/bothan"
exclude = [".github/"]


[workspace]
members = ["bothan-core", "bothan-binance", "bothan-coingecko", "bothan-api/server", "bothan-api/server-cli"]
exclude = ["bothan-api", "bothan-api-proxy"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.77"
chrono = "0.4.38"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
futures = "0.3.30"
humantime-serde = "1.1.1"
itertools = "0.13.0"
mockito = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
rust_decimal = "1.10.2"
semver = "1.0.23"
serde = { version = "1.0.197", features = ["std", "derive", "alloc"] }
serde_json = "1.0.116"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

bothan-core = { path = "bothan-core" }
bothan-api = { path = "bothan-api/server" }

bothan-binance = { path = "bothan-binance" }
#bothan-bybit = { path = "bothan-bybit" }
#bothan-coinbase = { path = "bothan-coinbase" }
bothan-coingecko = { path = "bothan-coingecko" }
#bothan-coinmarketcap = { path = "bothan-coinmarketcap" }
#bothan-cryptocompare = { path = "bothan-cryptocompare" }
#bothan-htx = { path = "bothan-htx" }
#bothan-kraken = { path = "bothan-kraken" }
#bothan-okx = { path = "bothan-okx" }
