[package]
name = "bothan-binance"
version = "0.1.0"
edition.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
thiserror = "1.0.56"
tracing = { version = "0.1.40", features = [] }
tokio = { version = "1.0.3", features = ["full"] }
tracing-subscriber = "0.3.17"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.108"
itertools = "0.12.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.29"
tokio-util = "0.7.10"
chrono = "0.4.31"
rand = "0.8.4"
dashmap = "5.5.3"
