[package]
name = "bothan-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bothan-core = { workspace = true }
bothan-binance = { workspace = true }
bothan-coingecko = { workspace = true }
bothan-coinmarketcap = { workspace = true }
bothan-cryptocompare = { workspace = true }
bothan-htx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

config = "0.14.0"
humantime-serde = "1.1.1"
tonic = "0.11"
prost = "0.12"
protoc-gen-prost = "0.3.1"
petgraph = "0.6.4"
serde_json = "1.0.114"
num-traits = "0.2.18"
itertools = "0.12.1"
protoc-gen-tonic = "0.4.0"
enum_dispatch = "0.3.12"

[build-dependencies]
tonic-build = "0.11"
