[package]
name = "bothan-binance"
version = "0.0.1-beta.3"
description = "Rust client for the Binance exchange with Bothan integration"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bothan-lib = { workspace = true }

async-trait = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
itertools = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ws-mock = { git = "https://github.com/bandprotocol/ws-mock.git", branch = "master" }

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
