[package]
name = "bothan-bybit"
version = "0.0.1-alpha.8"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures-util = "0.3.29"

async-trait = { workspace = true }
bothan-core = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
ws-mock = { git = "https://github.com/bandprotocol/ws-mock.git", branch = "master" }
