[package]
name = "bothan-coin-gecko"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
thiserror = "1.0.56"
serde = { version = "1.0.196", features = ["std", "derive", "alloc"] }
derive_more = {  version = "1.0.0-beta.6", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
url = "2.5.0"
bothan-core = { path = "../bothan-core" }
async-trait = "0.1.77"
chrono = "0.4.34"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
