[package]
name = "bothan-coingecko"
version = "0.0.1-alpha.4"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bothan-lib = { workspace = true }

async-trait = { workspace = true }
humantime-serde = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
url = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
serde_json = { workspace = true }
