[package]
name = "bothan-coinmarketcap"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
chrono = "0.4.34"
futures = "0.3.30"

bothan-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0.114"
itertools = "0.12.1"


[dev-dependencies]
mockito = "1.3.0"
serde_json = "1.0.64"
