[package]
name = "bothan-coinmarketcap"
version = "0.0.1-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bothan-core = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }


[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
