[package]
name = "bothan-core"
version = "0.0.1-beta.1"
description = "Core library for Bothan"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }

bincode = "2.0.0-rc.3"
chrono = "0.4.38"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["std", "rand_core"] }
hex = "0.4.3"
mini-moka = "0.10.3"
num-traits = "0.2.19"
rand = "0.8.5"
rust-rocksdb = "0.34.0"
serde_json = "1.0.132"
