[package]
name = "bothan-core"
version = "0.0.1-alpha.4"
description = "Core library for Bothan"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bothan-lib = { workspace = true }

bothan-binance = { workspace = true }
bothan-bitfinex = { workspace = true }
bothan-bybit = { workspace = true }
bothan-coinbase = { workspace = true }
bothan-coingecko = { workspace = true }
bothan-coinmarketcap = { workspace = true }
bothan-htx = { workspace = true }
bothan-kraken = { workspace = true }
bothan-okx = { workspace = true }

async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }

anyhow = "1.0.91"
bincode = "2.0.0-rc.3"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["std", "rand_core"] }
hex = "0.4.3"
log = "0.4.22"
mini-moka = "0.10.3"
num-traits = "0.2.19"
petgraph = "0.6.4"
prost = "0.13.1"
quote = "1.0.38"
rand = "0.8.5"
rust-rocksdb = "0.32.0"
serde_json = "1.0.132"
syn = "2.0.95"
uuid = { version = "1.11.0", features = ["v4"] }


