[package]
name = "bothan-core"
version = "0.0.1-beta.2"
description = "Core library for Bothan"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bothan-lib = { workspace = true }

bothan-binance = { workspace = true }
bothan-bitfinex = { workspace = true }
bothan-bybit = { workspace = true }
bothan-coinbase = { workspace = true }
bothan-coingecko = { workspace = true }
bothan-coinmarketcap = { workspace = true }
bothan-htx = { workspace = true }
bothan-kraken = { workspace = true }
bothan-okx = { workspace = true }

async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }

ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["std", "rand_core"] }
hex = "0.4.3"
mini-moka = "0.10.3"
rust-rocksdb = { version = "0.36.0", optional = true }
futures = "0.3.31"

[features]
default = []
rocksdb = ["dep:rust-rocksdb"]
all = ["rocksdb"]
