[package]
name = "bothan-cryptocompare"
version = "0.0.1-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bothan-core = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
