[package]
name = "bothan-lib"
version = "0.0.1-alpha.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
prometheus = "0.13.4"
opentelemetry_sdk = "0.28.0"
opentelemetry-prometheus = "0.28.0"
axum = "0.8.1"
hyper = "1.6.0"
once_cell = "1.21.1"
