[package]
name = "bothan-lib"
version = "0.0.1-beta.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
