[package]
name = "bothan-lib"
version = "0.0.1-beta.3"
description = "Library contain base functionality and types for Bothan"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

