[package]
name = "price-adapter-raw"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
thiserror = "1.0.50"
tracing = "0.1.40"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3.17"
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
itertools = "0.11.0"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
tokio-util = "0.7.10"
chrono = "0.4.31"
rand = "0.8.5"
