[package]
name = "price-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
price-adapter-raw = { version = "0.1.0", path = "../price-adapter-raw" }
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
