[package]
name = "price-adapter"
description = "price-adapter"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
price-adapter-raw = { version = "0.1.0", path = "../price-adapter-raw" }
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
tokio-util = "0.7.10"
async-trait = "0.1.74"
