[package]
name = "price-adapter"
description = "price-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
price-adapter-raw.workspace = true
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
tokio-util = "0.7.10"
async-trait = "0.1.74"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
