[package]
name = "bothan-api-cli"
version = "0.0.1-beta.3"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bothan"
path = "src/main.rs"

[dependencies]
bothan-api = { workspace = true }
bothan-core = { workspace = true, features = ["rocksdb"] }
bothan-client = { workspace = true }
bothan-lib = { workspace = true }

bothan-binance = { workspace = true }
bothan-bitfinex = { workspace = true }
bothan-bybit = { workspace = true }
bothan-coinbase = { workspace = true }
bothan-coingecko = { workspace = true }
bothan-coinmarketcap = { workspace = true }
bothan-htx = { workspace = true }
bothan-kraken = { workspace = true }
bothan-okx = { workspace = true }

dirs = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
inquire = "0.7.5"
toml = "0.8.20"
tonic-reflection = "0.12.3"
humantime = "2.2.0"
prettytable = "0.10.0"
