[package]
name = "bothan-api"
version = "0.0.1-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bothan-core = { workspace = true }

bothan-binance = { workspace = true }
bothan-bybit = { workspace = true }
bothan-coinbase = { workspace = true }
bothan-coingecko = { workspace = true }
bothan-coinmarketcap = { workspace = true }
bothan-cryptocompare = { workspace = true }
bothan-htx = { workspace = true }
bothan-kraken = { workspace = true }
bothan-okx = { workspace = true }

prost = { workspace = true }
rust_decimal = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

config = "0.14.0"
dirs = "5.0.1"
